src/styles.css
:root {
   --edit-message: "Click to edit";
   --theme-header: lightgray;
   --theme-sidebar: rgb(235, 235, 235);
   --theme-border: black;
   --theme-text: black;
   --theme-selected-project-text: white;
   --theme-selected-project-background: rgb(50, 50, 200);
   --theme-selected-project-selection-text: black;
   --theme-selected-project-selection-background: yellow;
   --theme-delete: red;
   --theme-delete-text: white;
   --theme-complete: green;
   --theme-complete-text: white;
}

* {
   padding: 0;
   margin: 0;
   color: var(--theme-text);
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.circle {
   aspect-ratio: 1;
   border-radius: 100%;
}

button {
   border: none;
   background: none;
   cursor: pointer;
}

body {
   display: flex;
   flex-flow: column;
   min-height: 100vh;
}

body > header {
   padding: 24px;
   background: var(--theme-header);
   white-space: nowrap;
}

body > main {
   display: flex;
   flex: 1;
   border-top: solid var(--theme-border) 1px;
}

body > main > nav {
   display: flex;
   flex-flow: column;
   border-right: solid var(--theme-border) 1px;
   gap: 16px;
   min-width: 400px;
   max-width: 400px;
   padding: 24px;
   background: var(--theme-sidebar);
}

body > main > nav > header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 12px;
   width: 100%;
}

body > main > nav > header > button {
   box-shadow: 0 0 2px 0 var(--theme-border);
   font-size: 1.2rem;
   height: 44px;
   padding: 6px;
   padding-bottom: 10px;
   transition: background-color 150ms, color 150ms, opacity 150ms, box-shadow 150ms;
}

body > main > nav > header > button:hover,
body > main > nav > header > button:focus-visible {
   box-shadow: none;
   color: var(--theme-selected-project-text);
   background: var(--theme-selected-project-background);
}

body > main > nav > header > button:active {
   transition: opacity 50ms;
   opacity: 50%;
}

body > main > nav > ul {
   display: flex;
   flex-flow: column;
   gap: 12px;
}

body > main > nav > ul > li {
   display: flex;
   justify-content: space-between;
   gap: 12px;
}

body > main > nav > ul > li > button.delete {
   color: var(--theme-delete);
   font-weight: bold;
   font-size: 1.2rem;
   height: 44px;
   opacity: 0;
   transition: opacity 150ms, background-color 150ms, color 150ms;
   padding-bottom: 2px;
}

body > main > nav > ul > li:hover > button.delete,
body > main > nav > ul > li:focus-within > button.delete,
body > main > nav > ul > li .project.selected + button.delete {
   opacity: 80%;
}

body > main > nav > ul > li > button.delete:hover,
body > main > nav > ul > li > button.delete:focus-visible {
   color: var(--theme-delete-text);
   background: var(--theme-delete);
}

body > main > nav > ul > li .project + button.delete:active {
   transition: opacity 50ms;
   opacity: 50%;
}

body > main > nav > ul > li > form {
   display: flex;
   width: 100%;
}

body > main > nav > ul > li .project {
   flex: 1;
   text-align: start;
   border: none;
   background: none;
   color: rgb(120, 120, 120);
   padding: 8px 16px;
   border-radius: 16px;
   font-size: 1.1rem;
   transition: color 150ms, background-color 150ms, box-shadow 150ms;
}

body > main > nav > ul > li > button.project {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 80%;
   gap: 16px;
}

body > main > nav > ul > li > button.project.selected {
   outline-offset: 6px;
}

body > main > nav > ul > li > button.project > div {
   color: inherit;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
}

body > main > nav > ul > li > button.project::after {
   opacity: 0%;
   content: var(--edit-message);
   white-space: nowrap;
   font-size: 0.6rem;
   transition: opacity 150ms;
}

body > main > nav > ul > li > button.project.selected:hover::after,
body > main > nav > ul > li > button.project.selected:focus-visible::after {
   opacity: 80%;
}

body > main > nav > ul > li .project:hover,
body > main > nav > ul > li .project:focus-visible {
   color: var(--theme-text);
}

body > main > nav > ul > li .project.selected {
   color: var(--theme-selected-project-text);
   background: var(--theme-selected-project-background);
}

body > main > nav > ul > li .project.selected:hover,
body > main > nav > ul > li .project.selected:focus-visible {
   box-shadow: 0 0 6px var(--theme-selected-project-background);
}

body > main > nav > ul > li .project.selected::selection {
   color: var(--theme-selected-project-selection-text);
   background: var(--theme-selected-project-selection-background);
}

body > main > nav > ul > li > form > input.project.selected {
   transition: box-shadow 0ms;
   outline: none;
}

body > main > ul.tasks {
   --task-size: 200px;
   --task-layout: repeat(auto-fill, var(--task-size));
   display: grid;
   grid-template: var(--task-layout) / var(--task-layout);
   padding: 24px;
   gap: 24px;
   justify-content: space-evenly;
   flex: 1;
   transition: opacity 200ms;
}

body > main > ul.tasks.hidden {
   transition: opacity 10ms;
   opacity: 0%;
}

body > main > ul.tasks > li {
   display: flex;
   border: solid var(--theme-border) 1px;
   height: var(--task-size);
   padding: 24px;
   border-radius: 24px;
}

body > main > ul.tasks > li.task {
   flex-flow: column;
   gap: 12px;
}

body > main > ul.tasks > li.task > * {
   text-overflow: ellipsis;
   overflow: hidden;
}

body > main > ul.tasks > li.task > h2 {
   font-size: 1.2rem;
}

body > main > ul.tasks > li.task > .actions {
   display: flex;
   justify-content: end;
   margin-top: auto;
   gap: 12px;
}

body > main > ul.tasks > li.task > .actions > button.complete {
   color: var(--theme-complete);
   font-weight: bold;
   font-size: 1.2rem;
   height: 36px;
   opacity: 0;
   transition: opacity 150ms, background-color 150ms, color 150ms;
   padding-bottom: 2px;
}

body > main > ul.tasks > li.task:hover > .actions > button.complete,
body > main > ul.tasks > li.task:focus-within > .actions > button.complete {
   opacity: 80%;
}

body > main > ul.tasks > li.task > .actions > button.complete:hover,
body > main > ul.tasks > li.task > .actions > button.complete:focus-visible {
   color: var(--theme-complete-text);
   background: var(--theme-complete);
}

body > main > ul.tasks > li.task > .actions > button.complete:active {
   opacity: 50%;
}

body > main > ul.tasks > li.add-task {
   border: dashed var(--theme-border) 1px;
   padding: 0;
}

body > main > ul.tasks > li.add-task > button {
   width: 100%;
   transition: background-color 150ms, opacity 150ms;
   border-radius: inherit;
}

body > main > ul.tasks > li.add-task > button:hover,
body > main > ul.tasks > li.add-task > button:focus-visible {
   background: var(--theme-sidebar);
}

body > main > ul.tasks > li.add-task > button:active {
   opacity: 60%;
}

